# rent-prediction-app

./: Makefile  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
rent_prediction/: runner.py
rent_prediction/config/: .env  __init__.py  db.py  log.py  model.py
rent_prediction/db/: db_model.py
rent_prediction/model/: model_service.py
rent_prediction/model/pipeline/: collection.py  models.py  preperation.py
